--- a/TextInputEffects/css/set1.css
+++ b/TextInputEffects/css/set1.css
@@ -465,7 +465,7 @@
   	top: 0;
   	z-index: -1;
   	width: 100%;
-  	height: 4em;
+  	height: 54px;
 	box-shadow: 0px 0px 0px 0px;
 	/*color: rgba(199,152,157, 0.6);*/
 	color: rgba(102, 175, 153, 0.6);
